<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCard"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginView"
    android:layout_marginBottom="@dimen/loginView"
    android:background="@color/whiteColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginView">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/register"
            android:layout_marginTop="@dimen/loginView"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_first_name"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/first_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_last_name"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/last_name"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_country"
                style="@style/modifiedEditText"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/country"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_username"
                style="@style/modifiedEditText"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/username"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_password"
                style="@style/modifiedEditText"
                android:hint="@string/password"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_password_confirm"
                style="@style/modifiedEditText"
                android:hint="@string/password_confirm"
                android:maxLines="1"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_account"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Register" />

        <TextView
            android:id="@+id/btn_go_login"
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryColor"
            android:text="@string/signup_login"
            android:layout_marginTop="@dimen/loginView"/>

    </LinearLayout>
</androidx.cardview.widget.CardView>
