<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCard"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginView"
    android:layout_marginBottom="@dimen/loginView"
    android:background="@color/whiteColor">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginView">

        <TextView
            style="@style/headerTextPrimary"
            android:text="@string/setting_up_profile"
            android:layout_marginTop="@dimen/loginView"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_salary"
                style="@style/modifiedEditText"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/salary"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_salary_receipt"
                style="@style/modifiedEditText"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/salary_receipt"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_incomes"
                style="@style/modifiedEditText"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/other_incomes"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup">
            <EditText
                android:id="@+id/edt_bank_rates"
                style="@style/modifiedEditText"
                android:inputType="number"
                android:maxLines="1"
                android:hint="@string/bank_rates"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_setting_profile"
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="Confirm" />


    </LinearLayout>
</androidx.cardview.widget.CardView>
