<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCard"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginView"
    android:layout_marginBottom="@dimen/loginView"
    android:background="@color/whiteColor">


    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginView">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginView"
            android:text="@string/select_sending" />

        <Spinner
            android:id="@+id/select_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_from_acc_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginView">

            <EditText
                android:id="@+id/sum"
                style="@style/modifiedEditText"
                android:hint="@string/transfer_amount"
                android:inputType="numberDecimal"
                android:textSize="20dp" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            style="@style/headerTextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginView"
            android:text="@string/select_receiving" />

        <Spinner
            android:id="@+id/select_acc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_from_acc_title" />


        <Button
            android:id="@+id/confirm"
            style="@style/loginButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginView"
            android:text="@string/confirm_transfer" />


    </LinearLayout>
</androidx.cardview.widget.CardView>
